[tool.poetry]
name = "geo-chat"
version = "0.1.0"
description = "an exploration at the intersection of verifiable data (Geo) & LLMs"
authors = ["denver <denverbaumgartner@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_chat"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
subgrounds = "^1.7.0"
transformers = {extras = ["sentencepiece"], version = "^4.33.1"}
tensorflow = "^2.13.0"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.2"
sphinx = "^7.2.6"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
